Eliminate the dependency to S3 from server
